interface for userProfile + fix z-index header
Created a new page for user settings with its base interface for the left menu. Added the session check to that page only.

--- a/css/header.css
+++ b/css/header.css
@@ -20,6 +20,7 @@ header {
     -moz-transition: width 0.2s ease-in-out;
     -o-transition: width 0.2s ease-in-out;
     transition: width 0.2s ease-in-out;
+	z-index: 1;
 }
 
 /* items in container */
@@ -37,6 +38,7 @@ header > button {
 	align-items: center;
 
 	color: var(--header-foreground);
+	z-index: 1;
 }
 
 /* transition on items hover */
